# tictac

./: Cargo.toml  README.md
benches/: bench_ult.rs
src/: ai.rs  board.rs  game.rs  lib.rs  main.rs  tic.rs
src/ai/: board.rs  minimax.rs  monte.rs
src/ai/board/: entry.rs  game.rs
src/ai/board/entry/: game.rs
src/board/: entry.rs
src/game/: board.rs  entry.rs  ult.rs
