[package]
name = "tictac"
version = "0.1.0"
authors = ["Benjamin Hough <benjaminhough@microvu.com>"]
edition = "2018"

[lib]
name = "tictac"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
rand = "0.7.3"
colored = "1.9.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_ult"
harness = false
